--- a/APR_Calculator.html
+++ b/APR_Calculator.html
@@ -57,7 +57,7 @@
       <div class="row">
           <div class="col">
               <div>
-                  <label for="loanfield">Lone Amount</label>
+                  <label for="loanfield">Loan Amount</label>
                   <input id="loanfield" type="text">                        
               </div>
               <div>
